remove -XX:MaxPermSize=256m because of java8